# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
htmlcov/: index.html  src_mathgenerator_py.html  status.json
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  database_connection.py  initialize_database.py  mathgenerator.py
src/entities/: user.py
src/repositories/: user_repository.py
src/services/: math_service.py
src/tests/: conftest.py  mathgen_test.py  mathgenerator_test.py
src/tests/repositories/: user_repository_test.py
