[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Ilari Matikainen <ilari.matikainen@rokki.net>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
coverage = "^5.5"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.3"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
